--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1132,6 +1132,104 @@ form button:hover {
   text-align: center;
 }
 
+.shop__cart {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.shop__cart #checkout {
+  width: 75%;
+  border-radius: 5px;
+}
+.shop__cart #checkout .cart__list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+@media only screen and (min-width: 768px) {
+  .shop__cart #checkout .cart__list {
+    flex-direction: row;
+  }
+}
+.shop__cart #checkout .cart__list .cart__list__description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 40%;
+  text-align: center;
+  position: relative;
+}
+@media only screen and (min-width: 768px) {
+  .shop__cart #checkout .cart__list .cart__list__description {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+}
+.shop__cart #checkout .cart__list .cart__list__description .list--divBtn {
+  position: absolute;
+  top: 96.5%;
+  width: 220%;
+}
+@media only screen and (min-width: 768px) {
+  .shop__cart #checkout .cart__list .cart__list__description .list--divBtn {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+}
+.shop__cart #checkout .cart__list .cart__list__description .list--divBtn span {
+  margin: 5px 45px;
+}
+@media only screen and (min-width: 768px) {
+  .shop__cart #checkout .cart__list .cart__list__description .list--divBtn span {
+    margin: 5px;
+  }
+}
+.shop__cart #checkout .cart__list .cart__list__description img {
+  width: 100px;
+  margin: 0 10px;
+}
+@media only screen and (min-width: 768px) {
+  .shop__cart #checkout .cart__list .cart__list__description img {
+    width: 75px;
+  }
+}
+.shop__cart #checkout .cart__list .cart__list__price {
+  display: flex;
+}
+.shop__cart #checkout .cart__list .cart__list__price span {
+  margin-left: 10px;
+}
+.shop__cart button {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-min-content;
+  height: min-content;
+  padding: 15px 15px;
+  margin: 20px;
+  font-size: 12px;
+  color: var(--text);
+  background-color: var(--background2);
+  border: none;
+  border-radius: 5px;
+}
+.shop__cart button:hover {
+  transform: scale(110%);
+  color: var(--background);
+  background-color: var(--text);
+}
+
 html {
   height: 100%;
   background: linear-gradient(180deg, var(--background) 0%, black 100%);
@@ -1160,4 +1258,4 @@ body {
 
 .blue {
   color: var(--text2);
-}/*# sourceMappingURL=style.css.map */
+}
